(tests
 (names
  test_obj_1_0
  test_obj_1_1
  test_obj_2_0
  test_obj_3_0
  test_obj_4_0
  test_obj_4_1
  test_obj_4_2
  test_obj_5_0
  test_obj_5_1
  test_obj_5_2
  ;test_obj_6_0
  ;test_obj_6_1
  test_memory_1
  test_memory_2
  ;play
  play3
  play4
  play2)
 (libraries memory_models smtml test))
